--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "devDependencies": {
-    "vitepress": "^1.1.3"
-  },
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vitepress": "^1.1.3"
+  },
+  "dependencies": {
+    "vue": "^3.4.24"
   }
 }
